added modal windows
- link script
- added backdrop and modal window
- update icon.svg

--- a/index.html
+++ b/index.html
@@ -381,5 +381,16 @@
 				</div>
 			</div>
 		</footer>
+
+		<div class="backdrop is-hidden">
+			<div class="modal">
+				<button class="btn-modal">
+					<svg class="btn-close">
+						<use href="./images/icons.svg#icon-close-btn"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
