--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,13 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300" />
+								<img
+									class="block"
+									src="./images/cashless-payment.jpg"
+									alt="cashless-payment"
+									width="360"
+									height="300"
+								/>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Cashless Payment</h2>
 									<p>Marketing</p>
@@ -114,7 +120,13 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/screen-illustration.jpg" alt="screen-illustration" width="360" height="300" />
+								<img
+									class="block"
+									src="./images/screen-illustration.jpg"
+									alt="screen-illustration"
+									width="360"
+									height="300"
+								/>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Screen Illustrations</h2>
 									<p>Design</p>
@@ -132,7 +144,13 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/instagram-stories.jpg" alt="instagram-stories" width="360" height="300" />
+								<img
+									class="block"
+									src="./images/instagram-stories.jpg"
+									alt="instagram-stories"
+									width="360"
+									height="300"
+								/>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Instagram Stories Concept</h2>
 									<p>Design</p>
