linked js to modal

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<section class="hero-wrapper">
 				<div class="container">
 					<h1 class="hero header">Effective Solutions<br />for Your Business</h1>
-					<button class="order-button" type="button">Order Service</button>
+					<button class="order-button" type="button" data-modal-open>Order Service</button>
 				</div>
 			</section>
 
@@ -382,9 +382,9 @@
 			</div>
 		</footer>
 
-		<div class="backdrop is-hidden">
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
-				<button class="btn-modal">
+				<button class="btn-modal" data-modal-close>
 					<svg class="btn-close">
 						<use href="./images/icons.svg#icon-close-btn"></use>
 					</svg>
