--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,15 @@
 					<ul class="portfolio list">
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Banking App Interface Concept</h2>
 									<p>App</p>
@@ -87,13 +95,21 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img
-									class="block"
-									src="./images/cashless-payment.jpg"
-									alt="cashless-payment"
-									width="360"
-									height="300"
-								/>
+								<div class="item-thumb">
+									<img
+										class="block"
+										src="./images/cashless-payment.jpg"
+										alt="cashless-payment"
+										width="360"
+										height="300"
+									/>
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Cashless Payment</h2>
 									<p>Marketing</p>
@@ -102,7 +118,15 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/meditaion-app.jpg" alt="meditaion-app" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Meditaion App</h2>
 									<p>App</p>
@@ -111,7 +135,15 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/texi-service.jpg" alt="texi-service" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Taxi Service</h2>
 									<p>Marketing</p>
@@ -120,13 +152,21 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img
-									class="block"
-									src="./images/screen-illustration.jpg"
-									alt="screen-illustration"
-									width="360"
-									height="300"
-								/>
+								<div class="item-thumb">
+									<img
+										class="block"
+										src="./images/screen-illustration.jpg"
+										alt="screen-illustration"
+										width="360"
+										height="300"
+									/>
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Screen Illustrations</h2>
 									<p>Design</p>
@@ -135,7 +175,15 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/online-courses.jpg" alt="online-courses" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Online Courses</h2>
 									<p>Marketing</p>
@@ -144,13 +192,21 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img
-									class="block"
-									src="./images/instagram-stories.jpg"
-									alt="instagram-stories"
-									width="360"
-									height="300"
-								/>
+								<div class="item-thumb">
+									<img
+										class="block"
+										src="./images/instagram-stories.jpg"
+										alt="instagram-stories"
+										width="360"
+										height="300"
+									/>
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Instagram Stories Concept</h2>
 									<p>Design</p>
@@ -159,7 +215,15 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/organic-food.jpg" alt="organic-food" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Organic Food</h2>
 									<p>Web Site</p>
@@ -168,7 +232,15 @@
 						</li>
 						<li class="portfolio list-box">
 							<a href="" class="portfolio-item">
-								<img class="block" src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
+								<div class="item-thumb">
+									<img class="block" src="./images/freesh-coffee.jpg" alt="freesh-coffee" width="360" height="300" />
+									<div class="overlay">
+										<p>
+											14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+											Fruit Ecommerce App · Cloud Storage App
+										</p>
+									</div>
+								</div>
 								<div class="portfolio-item-description">
 									<h2 class="header portfolio">Fresh Coffee</h2>
 									<p>Web Site</p>
