--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 					</div>
 
 					<ul class="nav-menu list">
-						<li class="nav-item">
+						<li class="item active">
 							<a class="nav-link link" href="./index.html" rel="">Studio</a>
 						</li>
-						<li class="nav-item">
+						<li class="item">
 							<a class="nav-link link" href="./portfolio.html" rel="">Portfolio</a>
 						</li>
-						<li class="nav-item">
+						<li class="item">
 							<a class="nav-link link" href="" rel="">Contacts</a>
 						</li>
 					</ul>
 				</nav>
 				<ul class="nav-menu list">
-					<li class="nav-item">
+					<li class="item">
 						<a class="contact link" href="mailto:info@devstudio.com" rel="">info@devstudio.com</a>
 					</li>
-					<li class="nav-item">
+					<li class="item">
 						<a class="contact link" href="tel:+110001111111" rel="">+11 (000) 111-11-11</a>
 					</li>
 				</ul>
