--- a/index.html
+++ b/index.html
@@ -143,28 +143,28 @@
 								<ul class="social-links list list-icon">
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -180,28 +180,28 @@
 								<ul class="social-links list list-icon">
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -217,28 +217,28 @@
 								<ul class="social-links list list-icon">
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -254,28 +254,28 @@
 								<ul class="social-links list list-icon">
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-box">
 										<a class="link" href="">
-											<svg class="icon">
+											<svg class="icon" width="16" height="16">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -355,25 +355,25 @@
 					<ul class="social-links list list-icon">
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg> </a
 						></li>
