--- a/portfolio.html
+++ b/portfolio.html
@@ -267,25 +267,25 @@
 					<ul class="social-links list list-icon">
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg> </a
 						></li>
 						<li class="icon-box"
 							><a class="link" href="">
-								<svg class="icon">
+								<svg class="icon" width="24" height="24">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg> </a
 						></li>
