--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button class="btn-modal" data-modal-close>
-					<svg class="btn-close">
+					<svg width="8" height="8">
 						<use href="./images/icons.svg#icon-close-btn"></use>
 					</svg>
 				</button>
